kubernetes/charts/monitoring/manifests/prometheus-ingress-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stripprefix-prometheus
  namespace: monitoring
spec:
  stripPrefix:
    prefixes:
      - "/prometheus"
