kubernetes/charts/monitoring/manifests/ingress-prometheus.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stripprefix-prometheus
  namespace: monitoring
spec:
  stripPrefix:
    prefixes:
      - "/prometheus"
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-prometheus
  namespace: prometheus

spec:
  entryPoints:
    - web

  routes:
    - match: PathPrefix(`/prometheus`)
      kind: Rule
      services:
        - name: prometheus-server
          port: 80
      middlewares:
        - name: stripprefix-prometheus
