kubernetes/charts/monitoring/manifests/prometheus-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-prometheus
  namespace: prometheus

spec:
  entryPoints:
    - web

  routes:
    - match: PathPrefix(`/prometheus`)
      kind: Rule
      services:
        - name: prometheus-server
          port: 80
      middlewares:
        - name: stripprefix-prometheus
